# polaris-trade-libs

./: .commitlintrc.json  .cz.json  .dockerignore  .release-please-manifest.json  Cargo.toml  Makefile.toml  README  package.json  pnpm-lock.yaml  release-please-config.json  rust-toolchain.toml  rustfmt.toml
.cargo/: config-registry.toml  config.toml
.config/: hakari.toml  nextest.toml
.github/workflows/: ci.yml  coverage.yml  release-please.yml  security.yml
.husky/: commit-msg  pre-commit  pre-push
crates/_workspace-hack/: Cargo.toml
crates/utils/config-loader/: CHANGELOG.md  Cargo.toml
crates/utils/config-loader/src/: app_config.rs  database.rs  env.rs  kafka.rs  lib.rs  loader.rs  logging.rs  redis.rs  remote.rs
crates/utils/http-client/: CHANGELOG.md  Cargo.toml
crates/utils/http-client/src/: builder.rs  lib.rs
crates/utils/http-client/src/middleware/: mod.rs  tracing.rs
crates/utils/http-client/tests/: tests_http_client_builder.rs
crates/utils/logger/: CHANGELOG.md  Cargo.toml
crates/utils/logger/src/: file.rs  lib.rs  otel.rs  sysinfo.rs  tracing_unwrap.rs  util.rs
crates/utils/task-manager/: CHANGELOG.md  Cargo.toml  README.md
crates/utils/task-manager/src/: core_allocator.rs  error.rs  lib.rs  task_manager.rs  tasks.rs
