[package]
name = "config-loader"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
_workspace-hack = { workspace = true }
async-trait = { workspace = true }
config = { workspace = true, features = [
  "async",
  "json5",
  "json",
  "yaml",
  "toml",
  "convert-case",
] }
http-client = { workspace = true }
serde = { workspace = true }
