[package]
name = "http-client"
version = "0.0.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[features]
default = ["tracing"]
tracing = ["dep:reqwest-tracing", "dep:tracing-opentelemetry", "dep:tracing"]

[dependencies]
http = { workspace = true }
opentelemetry = { workspace = true, default-features = false, features = [
  "trace",
] }
reqwest = { workspace = true, features = [
  "rustls-tls",
  "gzip",
  "brotli",
  "deflate",
  "json",
  "stream",
  "multipart",
  "charset",
  "http2",
  "system-proxy",
] }
reqwest-middleware = { workspace = true }
reqwest-retry = { workspace = true }
reqwest-tracing = { workspace = true, features = [
  "opentelemetry_0_30",
], optional = true }
tracing = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }

[dev-dependencies]
async-trait = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
