[package]
name = "logger"
version = "0.1.1"
edition = "2024"
authors = [
    "Gabriel Putra Pinastika <gabri.putra@gmail.com> (https://github.com/0x67)",
]

[features]
default = ["stdout"]
stdout = ["dep:tracing-appender"]
file = ["dep:tracing-appender"]
otel = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:opentelemetry-appender-tracing",
    "dep:opentelemetry-semantic-conventions",
    "dep:opentelemetry-proto",
    "dep:opentelemetry-stdout",
    "dep:tracing-opentelemetry",
    "dep:tokio",
    "dep:tonic",
]
sysinfo = ["dep:sysinfo"]

[dependencies]
config-loader = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true, features = ["macros"] }
tracing = { workspace = true, features = ["valuable", "log"] }
tracing-appender = { workspace = true, optional = true }
tracing-attributes = { workspace = true }
tracing-core = { workspace = true }
tracing-subscriber = { workspace = true, features = [
  "env-filter",
  "json",
  "time",
] }
tracing-unwrap = { workspace = true }

# OpenTelemetry dependencies for traces, logs, and metrics (optional)
opentelemetry = { workspace = true, optional = true }
opentelemetry-appender-tracing = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true, features = [
  "grpc-tonic",
  "trace",
  "logs",
  "metrics",
] }
opentelemetry-proto = { workspace = true, optional = true }
opentelemetry-semantic-conventions = { workspace = true, optional = true }
opentelemetry-stdout = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true, features = [
  "rt-tokio",
] }
sysinfo = { workspace = true, optional = true, features = [
  "network",
  "system",
  "user",
  "disk",
  "component",
] }
tokio = { workspace = true, optional = true }
tonic = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }
