[package]
name = "task-manager"
version = "0.0.0"
edition = "2024"

[dependencies]
_workspace-hack = { workspace = true }
async-trait = { workspace = true }
core_affinity = { workspace = true }
logger = { path = "../logger" }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-graceful-shutdown = { workspace = true }
tokio-util = { workspace = true }
